extensive gopro metadata parsing work