@@ -20,13 +20,15 @@
         <!-- <module>sidd</module> -->
         <module>jpeg2000</module>
         <module>mpeg4</module>
+        <module>ts26_224</module>
         <module>gopro</module>
         <module>goprotools</module>
         <module>debugtools</module>
     </modules>
     <properties>
+        <auto-service.version>1.1.1</auto-service.version>
         <googleformatter.maven.plugin.version>1.7.5</googleformatter.maven.plugin.version>
-        <jacoco.version>0.8.8</jacoco.version>
+        <jacoco.version>0.8.11</jacoco.version>
         <jakarta.version>4.0.1</jakarta.version>
         <javafx.version>21.0.1</javafx.version>
         <jaxb.version>4.0.4</jaxb.version>
@@ -35,13 +37,19 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.test.version>3.0.1</slf4j.test.version>
-        <slf4j.version>2.0.9</slf4j.version>
-        <sortpom.version>3.2.1</sortpom.version>
-        <spotless.version>2.34.0</spotless.version>
+        <slf4j.version>2.0.11</slf4j.version>
+        <sortpom.version>3.3.0</sortpom.version>
+        <spotless.version>2.40.0</spotless.version>
         <testng.version>7.9.0</testng.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.google.auto.service</groupId>
+                <artifactId>auto-service-annotations</artifactId>
+                <version>${auto-service.version}</version>
+                <optional>true</optional>
+            </dependency>
             <dependency>
                 <groupId>jakarta.xml.bind</groupId>
                 <artifactId>jakarta.xml.bind-api</artifactId>
@@ -92,10 +100,18 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.12.1</version>
                     <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>com.google.auto.service</groupId>
+                                <artifactId>auto-service</artifactId>
+                                <version>${auto-service.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                         <compilerArgs>
+                            <arg>-Adebug</arg>
                             <arg>--enable-preview</arg>
                             <arg>-Xlint:unchecked</arg>
-                            <arg>-proc:none</arg>
+                            <arg>-proc:full</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
